--- a/productCold.html
+++ b/productCold.html
@@ -15,20 +15,19 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
 </head>
-<div>
 
-<!--the manu which is hidden-->
+<!--the menu which is hidden-->
 <div id="hidden" class="menu"   >
     <section class="hero" id="hero1">
         <div class="custom-container">
             <div class="container-1-one">
                 <div class="white-color headerlogo" >
-                    <img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="62px">
+                    <a href="/litecure/home.html"><img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="62px"></a>
                 </div>
                 <div class="headerlogo1 logo"><p>CLOSE<span><i class="fa fa-close"></i></span></p></div>
             </div>
             <div class="container-2-one">
-                <div class=" white-color secondnav left-list text-left ">
+                <div class=" white-color secondnav left-list">
                     <div class="outer-row custom-row">
                         <div class="evidence-menu" data-show="fade-1"><a href="#">evidence</a></div>
                         <div class="give-margin fade-1 evidence" >
@@ -38,10 +37,10 @@
                         </div>
                     </div>
                     <div class="custom-row inner-row second-hidden">
-                        <div class="give-margin fade-one"><a href="#">case studies</a></div>
-                        <div class="give-margin-less fade-one"><a href="#">companion animal studies</a></div>
-                        <div class="give-margin-less fade-one"><a href="#">research studies</a></div>
-                        <div class="give-margin-less fade-one"><a href="#">articles</a></div>
+                        <div class="give-margin fade-one"><a href="/litecure/publicationarchive.html">case studies</a></div>
+                        <div class="give-margin-less fade-one"><a href="/litecure/publicationarchive.html">companion animal studies</a></div>
+                        <div class="give-margin-less fade-one"><a href="/litecure/publicationarchive.html">research studies</a></div>
+                        <div class="give-margin-less fade-one"><a href="/litecure/publicationarchive.html">articles</a></div>
                     </div>
 
                     <div class="custom-row outer-row">
@@ -69,10 +68,10 @@
                         </div>
                     </div>
                     <div class="custom-row inner-row second-hidden">
-                        <div class="give-margin fade-three"><a href="#">customers</a></div>
-                        <div class="give-margin-less fade-three"><a href="#">clinical</a></div>
-                        <div class="give-margin-less fade-three"><a href="#">business</a></div>
-                        <div class="give-margin-less fade-three"><a href="#">pet owners</a></div>
+                        <div class="give-margin fade-three"><a href="/litecure/single-product.html">customers</a></div>
+                        <div class="give-margin-less fade-three"><a href="/litecure/single-product.html">clinical</a></div>
+                        <div class="give-margin-less fade-three"><a href="/litecure/single-product.html">business</a></div>
+                        <div class="give-margin-less fade-three"><a href="/litecure/single-product.html">pet owners</a></div>
                     </div>
                 </div>
                 <div class="text-center">
@@ -81,35 +80,37 @@
                         <div class="person"><a href="#"><img src="assets/person-icon.png"></a></div>
                         <div class="chaticon"><a href="#"><img src="assets/chaticon.png"></a></div>
                         <div class="telephone"><a href="#"><img src="assets/telephone-icon.png"></a></div>
-                        <div class="globe"><a href="#"><img src="assets/globe-iocn (1).png"></a></div>
+                        <div class="globe"><a href="#"><img src="assets/globe-iocn.png"></a></div>
                     </div>
                     <div class="caption-icons-1 pt-3  pb-3" style="display:none;">
                         <div class="search-nav magnifier">
                             <input type="text" placeholder="TYPE SEARCH">
-                            <img src="assets/magnifier.png">
+                            <img src="assets/magnifier-red.png">
                         </div>
-                        <div class="search-nav person">
-                            <p>MY ACCOUNT</p>
-                            <img src="assets/person-icon.png">
-                        </div>
+                        <a href="/litecure/dashboard.html">
+                            <div class="search-nav person">
+                                <p>MY ACCOUNT</p>
+                                <img src="assets/person-icon-red.png">
+                            </div>
+                        </a>
                         <div class="search-nav chaticon">
                             <p>LIVE CHAT</p>
-                            <img src="assets/chaticon.png">
+                            <img src="assets/chaticon-red.png">
                         </div>
                         <div class="search-nav telephone">
                             <p>CALL US</p>
-                            <img src="assets/telephone-icon.png">
+                            <img src="assets/telephone-icon-red.png">
                         </div>
                         <div class="search-nav globe">
                             <p>FR &nbsp; DE &nbsp; ES</p>
-                            <img src="assets/globe-iocn (1).png">
+                            <img src="assets/globe-iocn-red.png">
                         </div>
                     </div>
                 </div>
             </div>
             <div class="container-computer">
                 <div class="computer-area">
-                    <img src="assets/computer.png" >
+                    <a href="/litecure/single-product.html"><img src="assets/computer.png" ></a>
                 </div>
                 <div class="computer-area-text">
                     <p>CTC Therapy laser</p>
@@ -117,21 +118,21 @@
             </div>
             <div class="container-3-one">
                 <div class=" secondnav1">
-                    <div class="active">
+                    <div class="active linkingarea">
                         <a href="#" class="white-color">companion products</a>
                         <div class="inner-area-menu">
-                            <a href="#">photobiomodulation</a>
-                            <a href="#">regenerative medicine</a>
-                            <a href="#">diagnostics</a>
-                            <a href="#">hydrotherapy</a>
-                            <a href="#">cold compression</a>
+                            <a href="/litecure/productphotobio.html">photobiomodulation</a>
+                            <a href="/litecure/productregen.html">regenerative medicine</a>
+                            <a href="/litecure/diagnostics.html">diagnostics</a>
+                            <a href="/litecure/producthydro.html">hydrotherapy</a>
+                            <a href="/litecure/productCold.html">cold compression</a>
                             <a href="#">business</a>
                         </div>
                     </div>
                     <div class=""><a href="#">companion animal health</a></div>
                     <div class=""><a href="#">employment</a></div>
-                    <div class=""><a href="#">blog</a></div>
-                    <div class=""><a href="#">support</a></div>
+                    <div class=""><a href="/litecure/blog.html">blog</a></div>
+                    <div class=""><a href="/litecure/supportlandingpage.html">support</a></div>
                 </div>
             </div>
         </div>
@@ -168,7 +169,7 @@
                     <div class="person"><a href="#"><img src="assets/person-icon.png"></a></div>
                     <div class="chaticon"><a href="#"><img src="assets/chaticon.png"></a></div>
                     <div class="telephone"><a href="#"><img src="assets/telephone-icon.png"></a></div>
-                    <div class="globe"><a href="#"><img src="assets/globe-iocn (1).png"></a></div>
+                    <div class="globe"><a href="#"><img src="assets/globe-iocn.png"></a></div>
                       
                 </div>
             </div>
