--- a/supportlandingpage.html
+++ b/supportlandingpage.html
@@ -17,133 +17,137 @@
 
 </head>
 <body>
-<!--this the main header dog and girl wala section -->
-
+<!--the menu which is hidden-->
 <div id="hidden" class="menu"   >
-        <section class="hero" id="hero1">
-            <div class="custom-container">
-                <div class="container-1-one">
-                    <div class="white-color headerlogo" >
-                        <img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="62px">
-                    </div>
-                    <div class="headerlogo1 logo"><p>CLOSE<span><i class="fa fa-close"></i></span></p></div>
+    <section class="hero" id="hero1">
+        <div class="custom-container">
+            <div class="container-1-one">
+                <div class="white-color headerlogo" >
+                    <a href="/litecure/home.html"><img src="assets/logos/whitelitecure.png" class="top-logo" alt="companion" width="144px" height="62px"></a>
                 </div>
-                <div class="container-2-one">
-                    <div class=" white-color secondnav left-list text-left ">
-                        <div class="outer-row custom-row">
-                            <div class="evidence-menu" data-show="fade-1"><a href="#">evidence</a></div>
-                            <div class="give-margin fade-1 evidence" >
-                                <a href="#">publications</a>
-                                <a href="#">advisory board</a>
-                                <a href="#">ongoing research</a>
-                            </div>
-                        </div>
-                        <div class="custom-row inner-row second-hidden">
-                            <div class="give-margin fade-one"><a href="#">case studies</a></div>
-                            <div class="give-margin-less fade-one"><a href="#">companion animal studies</a></div>
-                            <div class="give-margin-less fade-one"><a href="#">research studies</a></div>
-                            <div class="give-margin-less fade-one"><a href="#">articles</a></div>
-                        </div>
-
-                        <div class="custom-row outer-row">
-                            <div class="education-menu"  data-show="fade-2"><a href="#"> education</a></div>
-                            <div class="give-margin fade-2 education">
-                                <a href="#">Litecure Academy</a>
-                                <a href="#">webinars &amp; resources</a>
-                                <a href="#">live education</a>
-
-                            </div>
-                        </div>
-                        <div class="custom-row inner-row second-hidden">
-                            <div class="give-margin fade-two"><a href="#">Pain management</a></div>
-                            <div class="give-margin-less fade-two"><a href="#">Minimally invasive</a></div>
-                            <div class="give-margin-less fade-two"><a href="#">wellness</a></div>
-                            <div class="give-margin-less fade-two"><a href="#">emerging trends</a></div>
-                            <div class="give-margin-less fade-two"><a href="#">school of business</a></div>
-                        </div>
-                        <div class="custom-row outer-row">
-                            <div class="partner-menu" data-show="fade-3"><a href="#">partnership</a></div>
-                            <div class="give-margin fade-3 partnership">
-                                <a href="#">stories</a>
-                                <a href="#">team members</a>
-                                <a href="#">employees</a>
-                            </div>
-                        </div>
-                        <div class="custom-row inner-row second-hidden">
-                            <div class="give-margin fade-three"><a href="#">customers</a></div>
-                            <div class="give-margin-less fade-three"><a href="#">clinical</a></div>
-                            <div class="give-margin-less fade-three"><a href="#">business</a></div>
-                            <div class="give-margin-less fade-three"><a href="#">pet owners</a></div>
+                <div class="headerlogo1 logo"><p>CLOSE<span><i class="fa fa-close"></i></span></p></div>
+            </div>
+            <div class="container-2-one">
+                <div class=" white-color secondnav left-list">
+                    <div class="outer-row custom-row">
+                        <div class="evidence-menu" data-show="fade-1"><a href="#">evidence</a></div>
+                        <div class="give-margin fade-1 evidence" >
+                            <a href="#">publications</a>
+                            <a href="#">advisory board</a>
+                            <a href="#">ongoing research</a>
                         </div>
                     </div>
-                    <div class="text-center">
-                        <div class="icons-one">
-                            <div class="magnifier"><a href="#"><img src="assets/magnifier.png"></a></div>
-                            <div class="person"><a href="#"><img src="assets/person-icon.png"></a></div>
-                            <div class="chaticon"><a href="#"><img src="assets/chaticon.png"></a></div>
-                            <div class="telephone"><a href="#"><img src="assets/telephone-icon.png"></a></div>
-                            <div class="globe"><a href="#"><img src="assets/globe-iocn (1).png"></a></div>
+                    <div class="custom-row inner-row second-hidden">
+                        <div class="give-margin fade-one"><a href="/litecure/publicationarchive.html">case studies</a></div>
+                        <div class="give-margin-less fade-one"><a href="/litecure/publicationarchive.html">companion animal studies</a></div>
+                        <div class="give-margin-less fade-one"><a href="/litecure/publicationarchive.html">research studies</a></div>
+                        <div class="give-margin-less fade-one"><a href="/litecure/publicationarchive.html">articles</a></div>
+                    </div>
+
+                    <div class="custom-row outer-row">
+                        <div class="education-menu"  data-show="fade-2"><a href="#"> education</a></div>
+                        <div class="give-margin fade-2 education">
+                            <a href="#">Litecure Academy</a>
+                            <a href="#">webinars &amp; resources</a>
+                            <a href="#">live education</a>
+
                         </div>
-                        <div class="caption-icons-1 pt-3  pb-3" style="display:none;">
-                            <div class="search-nav magnifier">
-                                <input type="text" placeholder="TYPE SEARCH">
-                                <img src="assets/magnifier.png">
-                            </div>
+                    </div>
+                    <div class="custom-row inner-row second-hidden">
+                        <div class="give-margin fade-two"><a href="#">Pain management</a></div>
+                        <div class="give-margin-less fade-two"><a href="#">Minimally invasive</a></div>
+                        <div class="give-margin-less fade-two"><a href="#">wellness</a></div>
+                        <div class="give-margin-less fade-two"><a href="#">emerging trends</a></div>
+                        <div class="give-margin-less fade-two"><a href="#">school of business</a></div>
+                    </div>
+                    <div class="custom-row outer-row">
+                        <div class="partner-menu" data-show="fade-3"><a href="#">partnership</a></div>
+                        <div class="give-margin fade-3 partnership">
+                            <a href="#">stories</a>
+                            <a href="#">team members</a>
+                            <a href="#">employees</a>
+                        </div>
+                    </div>
+                    <div class="custom-row inner-row second-hidden">
+                        <div class="give-margin fade-three"><a href="/litecure/single-product.html">customers</a></div>
+                        <div class="give-margin-less fade-three"><a href="/litecure/single-product.html">clinical</a></div>
+                        <div class="give-margin-less fade-three"><a href="/litecure/single-product.html">business</a></div>
+                        <div class="give-margin-less fade-three"><a href="/litecure/single-product.html">pet owners</a></div>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <div class="icons-one">
+                        <div class="magnifier"><a href="#"><img src="assets/magnifier.png"></a></div>
+                        <div class="person"><a href="#"><img src="assets/person-icon.png"></a></div>
+                        <div class="chaticon"><a href="#"><img src="assets/chaticon.png"></a></div>
+                        <div class="telephone"><a href="#"><img src="assets/telephone-icon.png"></a></div>
+                        <div class="globe"><a href="#"><img src="assets/globe-iocn.png"></a></div>
+                    </div>
+                    <div class="caption-icons-1 pt-3  pb-3" style="display:none;">
+                        <div class="search-nav magnifier">
+                            <input type="text" placeholder="TYPE SEARCH">
+                            <img src="assets/magnifier-red.png">
+                        </div>
+                        <a href="/litecure/dashboard.html">
                             <div class="search-nav person">
                                 <p>MY ACCOUNT</p>
-                                <img src="assets/person-icon.png">
+                                <img src="assets/person-icon-red.png">
                             </div>
-                            <div class="search-nav chaticon">
-                                <p>LIVE CHAT</p>
-                                <img src="assets/chaticon.png">
-                            </div>
-                            <div class="search-nav telephone">
-                                <p>CALL US</p>
-                                <img src="assets/telephone-icon.png">
-                            </div>
-                            <div class="search-nav globe">
-                                <p>FR &nbsp; DE &nbsp; ES</p>
-                                <img src="assets/globe-iocn (1).png">
-                            </div>
+                        </a>
+                        <div class="search-nav chaticon">
+                            <p>LIVE CHAT</p>
+                            <img src="assets/chaticon-red.png">
                         </div>
-                    </div>
-                </div>
-                <div class="container-computer">
-                    <div class="computer-area">
-                        <img src="assets/computer.png" >
-                    </div>
-                    <div class="computer-area-text">
-                        <p>CTC Therapy laser</p>
-                    </div>
-                </div>
-                <div class="container-3-one">
-                    <div class=" secondnav1">
-                        <div class="active">
-                            <a href="#" class="white-color">companion products</a>
-                            <div class="inner-area-menu">
-                                <a href="#">photobiomodulation</a>
-                                <a href="#">regenerative medicine</a>
-                                <a href="#">diagnostics</a>
-                                <a href="#">hydrotherapy</a>
-                                <a href="#">cold compression</a>
-                                <a href="#">business</a>
-                            </div>
+                        <div class="search-nav telephone">
+                            <p>CALL US</p>
+                            <img src="assets/telephone-icon-red.png">
                         </div>
-                        <div class=""><a href="#">companion animal health</a></div>
-                        <div class=""><a href="#">employment</a></div>
-                        <div class=""><a href="#">blog</a></div>
-                        <div class=""><a href="#">support</a></div>
+                        <div class="search-nav globe">
+                            <p>FR &nbsp; DE &nbsp; ES</p>
+                            <img src="assets/globe-iocn-red.png">
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!--      next section start      -->
-        <!--the three dives-->
-        <section class="empty-div">
-            <div></div>
-        </section>
-        <div class="bottom-color"></div>
-    </div>
+            <div class="container-computer">
+                <div class="computer-area">
+                    <a href="/litecure/single-product.html"><img src="assets/computer.png" ></a>
+                </div>
+                <div class="computer-area-text">
+                    <p>CTC Therapy laser</p>
+                </div>
+            </div>
+            <div class="container-3-one">
+                <div class=" secondnav1">
+                    <div class="active linkingarea">
+                        <a href="#" class="white-color">companion products</a>
+                        <div class="inner-area-menu">
+                            <a href="/litecure/productphotobio.html">photobiomodulation</a>
+                            <a href="/litecure/productregen.html">regenerative medicine</a>
+                            <a href="/litecure/diagnostics.html">diagnostics</a>
+                            <a href="/litecure/producthydro.html">hydrotherapy</a>
+                            <a href="/litecure/productCold.html">cold compression</a>
+                            <a href="#">business</a>
+                        </div>
+                    </div>
+                    <div class=""><a href="#">companion animal health</a></div>
+                    <div class=""><a href="#">employment</a></div>
+                    <div class=""><a href="/litecure/blog.html">blog</a></div>
+                    <div class=""><a href="/litecure/supportlandingpage.html">support</a></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--      next section start      -->
+    <!--the three dives-->
+    <section class="empty-div">
+        <div></div>
+    </section>
+    <div class="bottom-color"></div>
+</div>
+<!--the section which is hidden -->
+
+<!--this the main header dog and girl wala section -->
 <div id="showen">
     <section class="hero" id="hero">
         <div class="main-container">
@@ -166,7 +170,7 @@
                         <div class="person"><a href="#"><img src="assets/person-icon.png"></a></div>
                         <div class="chaticon"><a href="#"><img src="assets/chaticon.png"></a></div>
                         <div class="telephone"><a href="#"><img src="assets/telephone-icon.png"></a></div>
-                        <div class="globe"><a href="#"><img src="assets/globe-iocn (1).png"></a></div>
+                        <div class="globe"><a href="#"><img src="assets/globe-iocn.png"></a></div>
 
                     </div>
                 </div>
