--- a/publicationarchive.html
+++ b/publicationarchive.html
@@ -171,7 +171,7 @@
                     <div class="person"><a href="#"><img src="assets/person-icon.png"></a></div>
                     <div class="chaticon"><a href="#"><img src="assets/chaticon.png"></a></div>
                     <div class="telephone"><a href="#"><img src="assets/telephone-icon.png"></a></div>
-                    <div class="globe"><a href="#"><img src="assets/globe-iocn (1).png"></a></div>
+                    <div class="globe"><a href="#"><img src="assets/globe-iocn.png"></a></div>
                       
                 </div>
             </div>
@@ -252,14 +252,14 @@
                 <p>Input search terms here<span>Search</span></p>
             </div>
         </div>
-        <div class="row further-row my-5">
+        <a href="/litecure/publication.html"><div class="row further-row my-5">
             <div class="image-div">
                 <img src="assets/triangles.jpg" width="271px" height="180px">
             </div>
             <div class="col-one">
                 <p class="">Archive asset title goes here in long format</p>
                 <p class="">
-                Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
+                    Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
                 </p>
                 <p class="pl-5 ">
                     <i class="fa fa-user  pr-3"></i>5,1649 Users
@@ -281,28 +281,24 @@
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
-                        <i class="fa fa-star checked"></i>  
+                        <i class="fa fa-star checked"></i>
                     </p>
                 </div>
             </div>
-        </div>
-
-
-
-
-        <div class="row further-row my-5">
+        </div></a>
+        <a href="/litecure/publication.html"><div class="row further-row my-5">
             <div class="image-div">
                 <img src="assets/triangles.jpg" width="271px" height="180px">
             </div>
             <div class="col-one">
                 <p class="">Archive asset title goes here in long format</p>
                 <p class="">
-                Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
+                    Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
                 </p>
                 <p class="pl-5 ">
-                    <i class="fa fa-user red-color pr-3"></i>5,1649 Users
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
+                    <i class="fa fa-user  pr-3"></i>5,1649 Users
+                    <i class="fa fa-sliders  pr-3 pl-5 icon-color"></i>Any label
+                    <i class="fa fa-sliders  pr-3 pl-5"></i>Any label
                 </p>
             </div>
             <div class="col-two">
@@ -319,28 +315,24 @@
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
-                        <i class="fa fa-star checked"></i>  
+                        <i class="fa fa-star checked"></i>
                     </p>
                 </div>
             </div>
-        </div>
-
-
-
-
-        <div class="row further-row my-5">
+        </div></a>
+        <a href="/litecure/publication.html"><div class="row further-row my-5">
             <div class="image-div">
                 <img src="assets/triangles.jpg" width="271px" height="180px">
             </div>
             <div class="col-one">
                 <p class="">Archive asset title goes here in long format</p>
                 <p class="">
-                Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
+                    Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
                 </p>
                 <p class="pl-5 ">
-                    <i class="fa fa-user red-color pr-3"></i>5,1649 Users
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
+                    <i class="fa fa-user  pr-3"></i>5,1649 Users
+                    <i class="fa fa-sliders  pr-3 pl-5 icon-color"></i>Any label
+                    <i class="fa fa-sliders  pr-3 pl-5"></i>Any label
                 </p>
             </div>
             <div class="col-two">
@@ -357,28 +349,24 @@
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
-                        <i class="fa fa-star checked"></i>  
+                        <i class="fa fa-star checked"></i>
                     </p>
                 </div>
             </div>
-        </div>
-
-
-
-
-        <div class="row further-row my-5">
+        </div></a>
+        <a href="/litecure/publication.html"><div class="row further-row my-5">
             <div class="image-div">
                 <img src="assets/triangles.jpg" width="271px" height="180px">
             </div>
             <div class="col-one">
                 <p class="">Archive asset title goes here in long format</p>
                 <p class="">
-                Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
+                    Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
                 </p>
                 <p class="pl-5 ">
-                    <i class="fa fa-user red-color pr-3"></i>5,1649 Users
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
+                    <i class="fa fa-user  pr-3"></i>5,1649 Users
+                    <i class="fa fa-sliders  pr-3 pl-5 icon-color"></i>Any label
+                    <i class="fa fa-sliders  pr-3 pl-5"></i>Any label
                 </p>
             </div>
             <div class="col-two">
@@ -395,27 +383,24 @@
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
-                        <i class="fa fa-star checked"></i>  
+                        <i class="fa fa-star checked"></i>
                     </p>
                 </div>
             </div>
-        </div>
-
-
-
-        <div class="row further-row my-5">
+        </div></a>
+        <a href="/litecure/publication.html"><div class="row further-row my-5">
             <div class="image-div">
                 <img src="assets/triangles.jpg" width="271px" height="180px">
             </div>
             <div class="col-one">
                 <p class="">Archive asset title goes here in long format</p>
                 <p class="">
-                Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
+                    Archive asset description goes here in abstract form. This is a description for the asset itself. You can enter this for search meta purposes and also for general usability.
                 </p>
                 <p class="pl-5 ">
-                    <i class="fa fa-user red-color pr-3"></i>5,1649 Users
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
-                    <i class="fa fa-sliders red-color pr-3 pl-5"></i>Any label
+                    <i class="fa fa-user  pr-3"></i>5,1649 Users
+                    <i class="fa fa-sliders  pr-3 pl-5 icon-color"></i>Any label
+                    <i class="fa fa-sliders  pr-3 pl-5"></i>Any label
                 </p>
             </div>
             <div class="col-two">
@@ -432,11 +417,11 @@
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
                         <i class="fa fa-star checked"></i>
-                        <i class="fa fa-star checked"></i>  
+                        <i class="fa fa-star checked"></i>
                     </p>
                 </div>
             </div>
-        </div>
+        </div></a>
 <div class="digit-icons">
                 <div class="container column">
                 <div class="digit-slider-icons p-three mr-3"> <i class="fa fa-chevron-left "></i></div>
