--- a/single-product.html
+++ b/single-product.html
@@ -162,15 +162,37 @@
                     <div class=""><a href="#">education</a></div>
                     <div class=""><a href="#">partnership</a></div>
                 </div>
-                <div class="text-center">
-                    <div class="icons">
-
+                <div class="text-center menumain">
+                    <div class="icons-one">
                         <div class="magnifier"><a href="#"><img src="assets/magnifier.png"></a></div>
                         <div class="person"><a href="#"><img src="assets/person-icon.png"></a></div>
                         <div class="chaticon"><a href="#"><img src="assets/chaticon.png"></a></div>
                         <div class="telephone"><a href="#"><img src="assets/telephone-icon.png"></a></div>
                         <div class="globe"><a href="#"><img src="assets/globe-iocn.png"></a></div>
-
+                    </div>
+                    <div class="caption-icons-1" style="display:none;">
+                        <div class="search-nav magnifier">
+                            <input type="text" placeholder="TYPE SEARCH">
+                            <img src="assets/magnifier-red.png">
+                        </div>
+                        <a href="/litecure/dashboard.html">
+                            <div class="search-nav person">
+                                <p>MY ACCOUNT</p>
+                                <img src="assets/person-icon-red.png">
+                            </div>
+                        </a>
+                        <div class="search-nav chaticon">
+                            <p>LIVE CHAT</p>
+                            <img src="assets/chaticon-red.png">
+                        </div>
+                        <div class="search-nav telephone">
+                            <p>CALL US</p>
+                            <img src="assets/telephone-icon-red.png">
+                        </div>
+                        <div class="search-nav globe">
+                            <p>FR &nbsp; DE &nbsp; ES</p>
+                            <img src="assets/globe-iocn-red.png">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -185,8 +207,8 @@
                     <div class="active"><a href="#" class="white-color">companion products</a></div>
                     <div class=""><a href="#">companion animal health</a></div>
                     <div class=""><a href="#">employment</a></div>
-                    <div class=""><a href="#">blog</a></div>
-                    <div class=""><a href="#">support</a></div>
+                    <div class=""><a href="/litecure/blog.html">blog</a></div>
+                    <div class=""><a href="/litecure/supportlandingpage.html">support</a></div>
                 </div>
                  <img src="assets/litecure-stop.png" class="ctx-images1" >
             </div>
